osso-af-startup (1.23-1) unstable; urgency=low

  * UNRELEASED
  * Added new file locale.orig for RFS/ROS and CUD operations.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 24 Aug 2006 12:40:55 +0300

osso-af-startup (1.22-1) unstable; urgency=low

  * Moved creation of /media/mmc2 directory from ke-recv to this package.
  * Removed chown of the memory card directories. Fixes: NB#37373
  * Fixed some Lintian warnings.
  * Removed deprecated Control Panel variable from af-defines.sh.
    Fixes: NB#34097
  * Adjusted lowmem module parameters. Fixes: NB#37478
  * Added dependency to sudo package.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 21 Aug 2006 14:43:52 +0300

osso-af-startup (1.21-2) unstable; urgency=low

  * Now calling HW keyboard layout configuration app if one exists.
    Fixes: NB#34412

 -- Kuisma Salonen <kuisma.salonen@nokia.com>  Wed, 19 Jul 2006 13:18:21 +0300

osso-af-startup (1.21-1) unstable; urgency=low

  * Added definition for HILDON_FM_OBEX_ROOT and DISABLE_GATEWAY.
  * Moved the restore application to appear before the startup wizard.
    Fixes: NB#30976

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 27 Jun 2006 15:23:15 +0300

osso-af-startup (1.20-1) unstable; urgency=low

  * Added definition for UPNP_ROOT.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 15 Jun 2006 12:36:21 +0300

osso-af-startup (1.19-1) unstable; urgency=low

  * Corrected OSSO_SWAP variable (N#30025).
  * Reduced sleep after desktop startup (N#30084).
  * Fixed removal of the first boot flag file (N#30178).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Sat, 03 Jun 2006 12:56:43 +0300

osso-af-startup (1.18-1) unstable; urgency=low

  * Added 'set +e' to af-defines.sh to cancel maemo-launcher's 'set -e',
    allowing use of grep in af-defines.sh.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 11 May 2006 13:36:13 +0300

osso-af-startup (1.17-1) unstable; urgency=low
