@@ -49,14 +49,14 @@ start)
   fi
 
   if [ -e $HOME/first-boot-flag ]; then
-    CONNECTIVITY_UI_SCRIPT=/usr/bin/osso-connectivity-ui.sh
-    CONNECTIVITY_UI_SCRIPT2=$AF_INIT_DIR/osso-connectivity-ui.sh
-    if [ -x $CONNECTIVITY_UI_SCRIPT ]; then
-      source $CONNECTIVITY_UI_SCRIPT start
-    fi
-    if [ -x $CONNECTIVITY_UI_SCRIPT2 ]; then
-      source $CONNECTIVITY_UI_SCRIPT2 start
-    fi
+#    CONNECTIVITY_UI_SCRIPT=/usr/bin/osso-connectivity-ui.sh
+#    CONNECTIVITY_UI_SCRIPT2=$AF_INIT_DIR/osso-connectivity-ui.sh
+#    if [ -x $CONNECTIVITY_UI_SCRIPT ]; then
+#      source $CONNECTIVITY_UI_SCRIPT start
+#    fi
+#    if [ -x $CONNECTIVITY_UI_SCRIPT2 ]; then
+#      source $CONNECTIVITY_UI_SCRIPT2 start
+#    fi
     if [ -x $AF_INIT_DIR/startup-wizard.sh ]; then
       source $AF_INIT_DIR/startup-wizard.sh start
       source $AF_INIT_DIR/af-defines.sh ;# re-read locale variables
