@@ -2,6 +2,7 @@ osso-af-startup (1.23-1) unstable; urgency=low
 
   * UNRELEASED
   * Added new file locale.orig for RFS/ROS and CUD operations.
+  * Removed unnecessary Connectivity UI startup in the first boot.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 24 Aug 2006 12:40:55 +0300
 
